--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Victoria's Portfolio</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 
     <!--Icons-->
@@ -22,7 +22,7 @@
 <body>
     <!--Header-->
     <header>
-        <a href="#" class="logo">Developer <span>X.</span></a>
+        <a href="#" class="logo">Consultant <span>V.</span></a>
 
         <div class="bx bx-menu" id="menu-icon">
             <!-- This -->
@@ -37,7 +37,7 @@
         </ul>
 
         <div class="top-btnn">
-            <a href="https://api.whatsapp.com/send?phone=08166603764" target="_blank" class="h-btn">Contact me</a>
+            <a href="https://api.whatsapp.com/send?phone=08115268476" target="_blank" class="h-btn">Contact me</a>
         </div>
     </header>
 
@@ -45,30 +45,34 @@
     <section class="hero" id="home">
         <div class="main-content" data-aos="fade-in">
             <h4>Hi, there!</h4>
-            <h1>I'm <span>Vick Damsel</span></h1>
-            <p>Reinventing the art of real estate. We are a real estate company dedicated to helping you locate and build your ideal property and homes.</p>
+            <h1>I'm <span>Victoria Dare</span></h1>
+            <p>Reinventing the art of real estate. I am a real estate agent dedicated to helping you locate and build your ideal property and homes.</p>
             <div class="social">
                 <a href="#"><i class="ri-facebook-fill"></i></a>
                 <a href="#"><i class="ri-instagram-fill"></i></a>
                 <a href="#"><i class="ri-twitter-fill"></i></a>
-                <a href="#"><i class="ri-youtube-fill"></i></a>
+                <!-- <a href="#"><i class="ri-youtube-fill"></i></a> -->
+                <a href="https://www.linkedin.com/in/victoria-dare-8470b9280?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><i class="ri-linkedin-box-fill"></i></a>
             </div>
 
             <div class="main-btn">
-                <a href="#" class="btn">Hire me</a>
-                <a href="#" class="btn btn2">Download CV</a>
+                <a href="https://api.whatsapp.com/send?phone=08115268476" class="btn">Hire me</a>
+                <a href="assets/pdf/Victoria's CV.pdf" download="Victoria's CV.pdf" class="btn btn2">Download CV</a>
             </div>
         </div>
+
+        <img src="assets/img/Victoria.png" alt="Image"/>
     </section>
 
     <!--About-->
     <section class="about" id="about">
+
         <div class="about-img" data-aos="zoom-in-down">
-            <img src="assets/img/new_21.png">
+            <img src="assets/img/Victoria.png">
         </div>
 
         <div class="about-text" data-aos="zoom-in-up">
-            <h2>I am an <span>affiliate marketer</span> associated with the real estate company,<span> Kingshasa Africa.</span> </h2>
+            <h2>I am an <span>investment advisor</span> and a <span>Real estate agent</span></h2>
             <div class="exp-area">
                 <p class="exp">
                     Experience:
@@ -77,12 +81,12 @@
 
                 <p class="exp">
                     Speciality:
-                    <span>Affiliate Marketer</span>
+                    <span>Real estate agent</span>
                 </p>
 
                 <p class="exp">
                     Address: 
-                    <span>Kobape, Abeokuta. Ogun State.</span>
+                    <span>Lagos Mainland, Nigeria.</span>
                 </p>
 
                 <p class="exp">
@@ -92,16 +96,17 @@
 
                 <p class="exp">
                     Phone: 
-                    <span>1123456789</span>
+                    <span>08115268476</span>
                 </p>
 
-                <!-- <p class="exp">
-                    Freelance: 
-                    <span>1 year</span>
-                </p> -->
+                <p class="exp">
+                    Affiliate(s): 
+                    <span>Kingshasa Africa, Orbit Africa, Dukiya investment, Double kings, and many more.</span>
+                </p>
             </div>
             <!-- <a href="#" class="btn">View all my projects</a> -->
         </div>
+        
     </section>
 
     <!--Services-->
@@ -112,36 +117,38 @@
 
         <div class="services-content" data-aos="zoom-in-up">
             <div class="box">
-                <img src="">
-                <h3>UI/UX Design</h3>
-                <p>Fringilla dapibus platrean interdum justoutan elentum
-                    lectusb tellus midign issimer motana egestas imperdiet solution.
+                <!-- <img src=""> -->
+                <!-- <i class="ri-line-chart-line"></i> -->
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M64 64C28.7 64 0 92.7 0 128V384c0 35.3 28.7 64 64 64H512c35.3 0 64-28.7 64-64V128c0-35.3-28.7-64-64-64H64zm64 320H64V320c35.3 0 64 28.7 64 64zM64 192V128h64c0 35.3-28.7 64-64 64zM448 384c0-35.3 28.7-64 64-64v64H448zm64-192c-35.3 0-64-28.7-64-64h64v64zM288 160a96 96 0 1 1 0 192 96 96 0 1 1 0-192z"/></svg>
+                <h3>Investment advisor</h3>
+                <p>I volunteer in helping my client estimate property value through skillful comparative market analysis, thereby developing business networks and collaborating with contractors, mortgage lenders, and attorneys.
                 </p>
-                <a href="#">
+                <a href="assets/pdf/Victoria's CV.pdf" download="Victoria's CV.pdf">
                     Download now
                     <i class="ri-arrow-right-line"></i>
                 </a>
             </div>
 
             <div class="box">
-                <img src="">
-                <h3>UI/UX Design</h3>
-                <p>Fringilla dapibus platrean interdum justoutan elentum
-                    lectusb tellus midign issimer motana egestas imperdiet solution.
+                <!-- <img src=""> -->
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z"/></svg>
+                <h3>Real estate agent</h3>
+                <p>As a Nigerian and a seasoned, professional Real estate agent, I assist buyers and sellers in the marketing and purchasing of real estate property at the best prices and with the best terms.
                 </p>
-                <a href="#">
+                <a href="assets/pdf/Victoria's CV.pdf" download="Victoria's CV.pdf">
                     Download now
                     <i class="ri-arrow-right-line"></i>
                 </a>
             </div>
 
             <div class="box">
-                <img src="">
-                <h3>UI/UX Design</h3>
-                <p>Fringilla dapibus platrean interdum justoutan elentum
-                    lectusb tellus midign issimer motana egestas imperdiet solution.
+                <!-- <img src=""> -->
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path d="M48 0C21.5 0 0 21.5 0 48V464c0 26.5 21.5 48 48 48h96V432c0-26.5 21.5-48 48-48s48 21.5 48 48v80h89.9c-6.3-10.2-9.9-22.2-9.9-35.1c0-46.9 25.8-87.8 64-109.2V271.8 48c0-26.5-21.5-48-48-48H48zM64 240c0-8.8 7.2-16 16-16h32c8.8 0 16 7.2 16 16v32c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16V240zm112-16h32c8.8 0 16 7.2 16 16v32c0 8.8-7.2 16-16 16H176c-8.8 0-16-7.2-16-16V240c0-8.8 7.2-16 16-16zm80 16c0-8.8 7.2-16 16-16h32c8.8 0 16 7.2 16 16v32c0 8.8-7.2 16-16 16H272c-8.8 0-16-7.2-16-16V240zM80 96h32c8.8 0 16 7.2 16 16v32c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16V112c0-8.8 7.2-16 16-16zm80 16c0-8.8 7.2-16 16-16h32c8.8 0 16 7.2 16 16v32c0 8.8-7.2 16-16 16H176c-8.8 0-16-7.2-16-16V112zM272 96h32c8.8 0 16 7.2 16 16v32c0 8.8-7.2 16-16 16H272c-8.8 0-16-7.2-16-16V112c0-8.8 7.2-16 16-16zM576 272a80 80 0 1 0 -160 0 80 80 0 1 0 160 0zM352 477.1c0 19.3 15.6 34.9 34.9 34.9H605.1c19.3 0 34.9-15.6 34.9-34.9c0-51.4-41.7-93.1-93.1-93.1H445.1c-51.4 0-93.1 41.7-93.1 93.1z"/></svg>
+                <h3>Property associate</h3>
+                <p>I convert leads to appointments and conduct high-level fiduciary needs analyses. I also 
+                    select and show homes and properties that meet client needs, help identify the best options, and assist client with redefining needs when necessary.
                 </p>
-                <a href="#">
+                <a href="assets/pdf/Victoria's CV.pdf" download="Victoria's CV.pdf">
                     Download now
                     <i class="ri-arrow-right-line"></i>
                 </a>
@@ -152,91 +159,97 @@
     <!--Portfolio-->
     <section class="portfolio" id="portfolio">
         <div class="center-text" data-aos="fade-down">
-            <h2>My <span>Portfolio</span><h2>
+            <h2>My <span>Affiliations</span><h2>
         </div>
         <div class="Portfolio-content" data-aos="zoom-in-up">
             <div class="row">
-                <img src="">
+                <img src="assets/img/1.jpeg">
                 <div class="main-row">
                     <div class="row-text">
-                        <h5>Website Design</h5>
+                        <h5>Real estate consultant</h5>
                     </div>
                     <div class="row-icon">
-                        <i class="ri-github-fill"></i>
+                        <!-- <i class="ri-github-fill"></i> -->
+                        <i class="ri-home-fill"></i>
                     </div>
                 </div>
-                <h4>Website Development for Dark X</h4>
+                <h4>Real estate consultant for Kingshasa Africa</h4>
             </div>
 
             <div class="row">
-                <img src="">
+                <img src="assets/img/2.jpeg">
                 <div class="main-row">
                     <div class="row-text">
-                        <h5>Website Design</h5>
+                        <h5>Property associate</h5>
                     </div>
                     <div class="row-icon">
-                        <i class="ri-github-fill"></i>
+                        <!-- <i class="ri-github-fill"></i> -->
+                        <i class="ri-home-fill"></i>
                     </div>
                 </div>
-                <h4>Website Development for Dark X</h4>
+                <h4>Property associate for Kingshasa</h4>
             </div>
 
             <div class="row">
-                <img src="">
+                <img src="assets/img/3.jpeg">
+                <div class="main-row">
+                    <div class="row-text">
+                        <h5>Property associate</h5>
+                    </div>
+                    <div class="row-icon">
+                        <!-- <i class="ri-github-fill"></i> -->
+                        <i class="ri-home-fill"></i>
+                    </div>
+                </div>
+                <h4>Property associate for Orbit Africa</h4>
+            </div>
+
+            <!-- <div class="row">
+                <img src="assets/img/4.jpeg">
                 <div class="main-row">
                     <div class="row-text">
                         <h5>Website Design</h5>
                     </div>
                     <div class="row-icon">
                         <i class="ri-github-fill"></i>
+                        <i class="ri-home-fill"></i>
                     </div>
                 </div>
                 <h4>Website Development for Dark X</h4>
+            </div> -->
+
+            <div class="row">
+                <img src="assets/img/5.jpeg">
+                <div class="main-row">
+                    <div class="row-text">
+                        <h5>Real estate agent</h5>
+                    </div>
+                    <div class="row-icon">
+                        <!-- <i class="ri-github-fill"></i> -->
+                        <i class="ri-home-fill"></i>
+                    </div>
+                </div>
+                <h4>Real estate agent for Kingshasa</h4>
             </div>
 
             <div class="row">
-                <img src="">
+                <img src="assets/img/6.jpeg">
                 <div class="main-row">
                     <div class="row-text">
-                        <h5>Website Design</h5>
+                        <h5>Real estate agent</h5>
                     </div>
                     <div class="row-icon">
-                        <i class="ri-github-fill"></i>
+                        <!-- <i class="ri-github-fill"></i> -->
+                        <i class="ri-home-fill"></i>
                     </div>
                 </div>
-                <h4>Website Development for Dark X</h4>
-            </div>
-
-            <div class="row">
-                <img src="">
-                <div class="main-row">
-                    <div class="row-text">
-                        <h5>Website Design</h5>
-                    </div>
-                    <div class="row-icon">
-                        <i class="ri-github-fill"></i>
-                    </div>
-                </div>
-                <h4>Website Development for Dark X</h4>
-            </div>
-
-            <div class="row">
-                <img src="">
-                <div class="main-row">
-                    <div class="row-text">
-                        <h5>Website Design</h5>
-                    </div>
-                    <div class="row-icon">
-                        <i class="ri-github-fill"></i>
-                    </div>
-                </div>
-                <h4>Website Development for Dark X</h4>
+                <h4>Real estate agent for Kingshasa Africa</h4>
             </div>
         </div>
     </section>
 
     <!--Contact Me-->
-    <section class="portfolio" id="contact">
+    <section class="contact" id="contact">
         <div class="center-text" data-aos="fade-down">
             <h2>Contact <span>Me</span><h2>
         </div>
@@ -253,7 +266,7 @@
 
     <div class="footer">
         <div class="copyright">
-            <p>2023, Ayodeji Omole. All rights reserved.</p>
+            <p>2023, Victoria Dare. All rights reserved.</p>
         </div>
 
         <a href="#" class="scroll-top">
